# sense_acquisition_gtech

./: CMakeLists.txt  README.md  package.xml  sense_eeg.cpp
.github/ISSUE_TEMPLATE/: request_pat.md
.github/workflows/: ci.yml  deps.repos
config/: gtec_publisher.yaml
include/: sense_eeg.h
launch/: gtec_eeg_publisher_launch.py
src/: sense_eeg.cpp  turtlebot4_first_cpp_node.cpp
